--- a/app/src/main/res/layout/activity_grid_item.xml
+++ b/app/src/main/res/layout/activity_grid_item.xml
@@ -18,7 +18,9 @@
         android:layout_toRightOf="@+id/icon"
         android:layout_centerVertical="true"
         android:padding="10dp"
-        android:textSize="16dp" >
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:textColor="#000080">
 
     </TextView>
 </RelativeLayout>
