--- a/app/src/main/res/layout/fragment_slider.xml
+++ b/app/src/main/res/layout/fragment_slider.xml
@@ -9,7 +9,8 @@
     <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="#000080" />
 
     <ImageView
         android:layout_width="match_parent"
